--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,27 +1,91 @@
-name: Build/release
+# This is a basic workflow to help you get started with Actions
 
-on: push
+name: Build
 
+# Controls when the action will run.
+on:
+  # Triggers the workflow on push or pull request events but only for the master branch
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
+  # This workflow contains a single job called "build"
+  buildLinux:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+      # Runs a set of commands using the runners shell
       - name: Check out Git repository
         uses: actions/checkout@v1
 
-      - name: Install Node.js, NPM and Yarn
+      - name: Install Node.js,
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10
+          
+
+      - name: Build Electron
+        run: npx electron-packager .
+      - name: Publish Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: linuxBuild
+          path: 'wrapper-offline-linux-x64'
+          
+  buildWindows:
+    runs-on: windows-latest
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2.3.0
+
+      - name: Check out Git repository
+        uses: actions/checkout@v1
+
+      - name: Install Node.js,
         uses: actions/setup-node@v1
         with:
           node-version: 10
 
-      - name: Build Electron app
-        uses: samuelmeuli/action-electron-builder@v1
+      - name: Build Electron
+        run: npx electron-packager .
+      - name: Publish Artifact
+        uses: actions/upload-artifact@v2.2.4
         with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
-          github_token: ${{ secrets.github_token }}
+          name: windowsBuild
+          path: 'wrapper-offline-win32-x64'
+  buildMac:
+    runs-on: macos-latest
+
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+
+
+      - name: Check out Git repository
+        uses: actions/checkout@v1
+
+      - name: Install Node.js,
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10
+          
+
+      - name: Build Electron
+        run: npx electron-packager . "Wrapper Offline" --platform=darwin --icon=server/favicon.icns
+      - name: Publish Artifact
+        uses: actions/upload-artifact@v2.2.4
+        with:
+          name: macBuild
+          path: 'wrapper-offline-darwin-x64'
